--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "main": "background.js",
   "dependencies": {
+    "apexcharts": "^3.26.0",
     "axios": "^0.21.1",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.0",
     "vue-cryptojs": "^2.1.5",
     "vue-router": "^3.2.0",
     "vue2-timepicker": "^1.1.6",
