--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "apexcharts": "^3.26.0",
     "axios": "^0.21.1",
+    "html2pdf": "^0.0.11",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
     "vue-cryptojs": "^2.1.5",
