--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
     "vue-cryptojs": "^2.1.5",
+    "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.2.0",
     "vue2-timepicker": "^1.1.6",
     "vuetify": "^2.4.0",
