--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "erc-sms-fe",
-  "version": "0.1.0",
+  "name": "erc_student_management",
+  "version": "0.9.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
