--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "erc_student_management",
-  "version": "0.9.1",
+  "productName": "ERC 학생관리 프로그램",
+  "version": "0.9.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
