--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "erc_student_management",
   "productName": "ERC 학생관리 프로그램",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -16,6 +16,7 @@
   "dependencies": {
     "apexcharts": "^3.26.0",
     "axios": "^0.21.1",
+    "electron-icon-builder": "^2.0.1",
     "html2pdf": "^0.0.11",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
